minor spacing issues when tilting on big screens

--- a/css/manifest.css
+++ b/css/manifest.css
@@ -580,7 +580,7 @@ TITLE: Parallax Container
   position: absolute;
   transform: translateZ(400px);
   width: 83%;
-  top: 10%;
+  top: 7%;
   left: 10%; }
   @media (min-width: 1440px) {
     #foreground else {
@@ -772,8 +772,7 @@ TITLE: Mouse hover effects
   width: 100%;
   height: 13%;
   background: transparent url("../images/up_arrow.png") no-repeat center center;
-  background-size: contain;
-  top: 2rem; }
+  background-size: contain; }
 
 #rightHover {
   left: auto;
