--- a/scss/molecules/_hover-effects.scss
+++ b/scss/molecules/_hover-effects.scss
@@ -48,7 +48,6 @@ TITLE: Mouse hover effects
 	height: 13%;
 	background: transparent url('../images/up_arrow.png') no-repeat center center;
 	background-size: contain;
-	top: 2rem;
 }
 
 #rightHover {
