--- a/scss/molecules/_parallax.scss
+++ b/scss/molecules/_parallax.scss
@@ -86,7 +86,7 @@ TITLE: Parallax Container
 	position: absolute;
   transform: translateZ(400px);
   width: 83%;
-  top: 10%;
+  top: 7%;
   left: 10%;
 
   @include breakpoint(1440px) {
